--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
     <script defer src="js/script.js"></script>
 </head>
 <body>
-
+    <section id="carousel" class="container">
+        <!-- principal part -->
+        <div class="row justify-content-center">
+            <div class="col-10 d-flex">
+                <figure id="principal" class="">
+                    <img src="img/01.webp" alt="">
+                    <div class="text text-end text-white">
+                        <h4>Marvel's Avengers</h4>
+                        <h6>Marvel\'s Avengers is an epic, third-person, action-adventure game that combines an original, cinematic story with single-player and co-operative gameplay.</h6>
+                    </div>
+                </figure>
+                <div id="thumbnails">
+                    <figure>
+                        <i class="bi bi-arrow-up-square bi-arrow-custom"></i>
+                        <img src="img/01.webp" alt="">
+                        <img src="img/02.webp" alt="">
+                        <img src="img/03.webp" alt="">
+                        <img src="img/04.webp" alt="">
+                        <img src="img/05.webp" alt="">
+                        <i class="bi bi-arrow-down-square bi-arrow-custom"></i>
+                    </figure>
+                </div>
+            </div>
+        </div>
+        
+        <!-- secondary part -->
+    </section>
 </body>
 </html>
